Add background script and update popup for job feed functionality

--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello Extension</title>
+    <title>Global Inter-Connect Jobs</title>
+    <link rel="stylesheet" href="popup.css">
   </head>
   <body>
-    <h1>Hello, Chrome Extension!</h1>
+    <h1>🌍 Global Inter-Connect</h1>
+    <p>Welcome! This is where your job feed will appear.</p>
+    <button id="testBtn">Click Me</button>
+    <script src="popup.js"></script>
   </body>
 </html>
 
-<h1>
-  Hello, Chrome Extension!
