--- a/popup.html
+++ b/popup.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Job Feed</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 10px;
-      width: 300px;
-      background: #f4f4f4;
-    }
-    h1 {
-      font-size: 18px;
-      margin-bottom: 10px;
-    }
-    .job {
-      background: white;
-      border-radius: 8px;
-      padding: 10px;
-      margin-bottom: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .job-title {
-      font-weight: bold;
-    }
-    .company {
-      font-size: 12px;
-      color: gray;
-    }
-  </style>
-</head>
-<body>
-  <h1>Today’s Job Feed</h1>
-  <div id="job-list"></div>
-  <script src="popup.js"></script>
-</body>
+  <head>
+    <title>Global Inter-Connect Jobs</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 10px;
+        width: 320px; /* keeps popup compact */
+      }
+
+      h1 {
+        font-size: 16px;
+        margin-bottom: 10px;
+      }
+
+      #job-feed {
+        max-height: 300px; /* controls how tall the feed is */
+        overflow-y: auto;  /* makes it scrollable */
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        padding: 8px;
+        background-color: #fafafa;
+      }
+
+      .job-item {
+        margin-bottom: 12px;
+        padding-bottom: 8px;
+        border-bottom: 1px solid #eee;
+      }
+
+      .job-item:last-child {
+        border-bottom: none;
+      }
+
+      .job-title {
+        font-weight: bold;
+        font-size: 14px;
+      }
+
+      .job-company {
+        font-size: 12px;
+        color: #666;
+      }
+
+      .job-link {
+        font-size: 12px;
+        color: #0073e6;
+        text-decoration: none;
+      }
+
+      .job-link:hover {
+        text-decoration: underline;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>🌍 Global Job Feed</h1>
+    <div id="job-feed"></div>
+    <script src="popup.js"></script>
+  </body>
 </html>
+
 document.addEventListener("DOMContentLoaded", () => {
   const testBtn = document.getElementById("testBtn");
   if (testBtn) {
