--- a/popup.html
+++ b/popup.html
@@ -5,99 +5,27 @@
     <style>
       body {
         font-family: Arial, sans-serif;
+        width: 300px;
+        height: 400px;
         margin: 0;
+        padding: 0;
+      }
+      #job-list {
+        height: 100%;
+        overflow-y: scroll;
         padding: 10px;
-        width: 320px; /* keeps popup compact */
       }
-
-      h1 {
-        font-size: 16px;
-        margin-bottom: 10px;
-      }
-
-      #job-feed {
-        max-height: 300px; /* controls how tall the feed is */
-        overflow-y: auto;  /* makes it scrollable */
-        border: 1px solid #ddd;
-        border-radius: 8px;
-        padding: 8px;
-        background-color: #fafafa;
-      }
-
-      .job-item {
-        margin-bottom: 12px;
-        padding-bottom: 8px;
-        border-bottom: 1px solid #eee;
-      }
-
-      .job-item:last-child {
-        border-bottom: none;
-      }
-
-      .job-title {
-        font-weight: bold;
-        font-size: 14px;
-      }
-
-      .job-company {
-        font-size: 12px;
-        color: #666;
-      }
-
-      .job-link {
-        font-size: 12px;
-        color: #0073e6;
-        text-decoration: none;
-      }
-
-      .job-link:hover {
-        text-decoration: underline;
+      .job {
+        border-bottom: 1px solid #ddd;
+        padding: 5px 0;
       }
     </style>
   </head>
   <body>
-    <h1>🌍 Global Job Feed</h1>
-    <div id="job-feed"></div>
+    <div id="job-list"></div>
     <script src="popup.js"></script>
   </body>
 </html>
 
-document.addEventListener("DOMContentLoaded", () => {
-  const testBtn = document.getElementById("testBtn");
-  if (testBtn) {
-    testBtn.addEventListener("click", () => {
-      alert("Extension test successful! 🚀");
-    });
-  }
-
-  const status = document.getElementById("status");
-  if (status) {
-    status.textContent = "Checking for updates...";
-  }
-  chrome.runtime.sendMessage({ action: "checkUpdates" }, (response) => {
-    if (status) {
-      status.textContent = response.message;
-    }
-  });
-
-  const jobs = [
-    { title: "Frontend Developer", company: "TechCorp", location: "Remote" },
-    { title: "Data Entry Specialist", company: "BizAssist", location: "New York" },
-    { title: "Customer Support Agent", company: "HelpDesk Inc.", location: "Remote" },
-    { title: "Junior Web Designer", company: "Creative Studio", location: "Los Angeles" },
-  ];
-
-  const jobList = document.getElementById("job-list");
-
-  jobs.forEach(job => {
-    const jobDiv = document.createElement("div");
-    jobDiv.className = "job";
-    jobDiv.innerHTML = `
-      <div class="job-title">${job.title}</div>
-      <div class="company">${job.company} – ${job.location}</div>
-    `;
-    jobList.appendChild(jobDiv);
-  });
-});<script src="popup.js"></script>
 
 
