Refactor job fetching and display logic: enhance search functionality, improve job rendering, and streamline country selection for better user experience

--- a/popup.html
+++ b/popup.html
@@ -85,22 +85,23 @@
       <option value="es">Spain</option>
       <option value="it">Italy</option>
       <option value="nl">Netherlands</option>
-    </select>
+      <option value="se">Sweden</option>
+      <option value="no">Norway</option>
+    </select>  
 
-    <!-- Job search bar -->
+    <!-- Search bar -->
     <div id="search-bar">
-      <input type="text" id="job-search" placeholder="Search for jobs...">
+      <input type="text" id="job-search" placeholder="Search for jobs">
     </div>
 
-    <!-- Remote jobs -->
-    <h3>🌍 Remote Jobs</h3>
-    <div id="remote-jobs"></div>
-
-    <!-- Local jobs -->
-    <h3>📍 Local Jobs</h3>
-    <div id="local-jobs
-"></div>
-
+    <!-- Job list -->
+    <div id="job-list">
+      <div id="remote-jobs"></div>
+      <div id="local-jobs"></div>
+    </div>
+  </div>
+</body>
+</html>   
 
 
 
