Update popup.js, popup.html, and manifest.json with debug-ready API and Get Started fix

--- a/popup.html
+++ b/popup.html
@@ -100,17 +100,11 @@
       <div id="local-jobs"></div>
     </div>
   </div>
+
+  <!-- JS scripts -->
+  <script src="popup.js"></script>
+  <script>
+    console.log("popup.html loaded ✅");
+  </script>
 </body>
-</html>   
-
-
-
-
-
-
-
-
-
-
-
-
+</html>
