Refactor job list styling: reduce max-height for improved layout consistency and enhance job section organization

--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@
       cursor: not-allowed;
     }
     #job-list {
-      max-height: 300px;
+      max-height: 200px;
       overflow-y: auto;
       text-align: left;
       margin-top: 10px;
@@ -94,16 +94,14 @@
       <input type="text" id="job-search" placeholder="Search for jobs">
     </div>
 
-    <!-- Remote jobs -->
+    <!-- Job sections -->
     <h3>🌍 Remote Jobs</h3>
     <div id="remote-jobs"></div>
 
-    <!-- Local jobs -->
     <h3>📍 Local Jobs</h3>
     <div id="local-jobs"></div>
+    <div id="job-list"></div>
   </div>
-
-  <script src="popup.js"></script>
 </body>
 </html>
 
